Added splash page.

--- a/css/my_css/homepage.css
+++ b/css/my_css/homepage.css
@@ -1,6 +1,20 @@
 .body, .body .div_video, .body .div_player_component, .body .div_player_component .div_current_track_playing_info, .body .div_player_component .div_current_track_playing_info .artist_name, .body .div_player_component .div_current_track_playing_info .track_name, .body .div_player_component .div_info_about_website, .body .div_player_component .div_info_about_website .btn_info,
 .body .div_player_component .div_info_about_website i, .body .div_player_component .div_info_about_website .div_playlist_heading, .body .div_player_component .div_playlist, .body .div_player_component .div_playlist .div_track, .body .div_player_component .div_playlist .div_track .div_track_info, .body .div_player_component .div_playlist .div_track .div_track_info .div_track_index, .body .div_player_component .div_playlist .div_track .div_track_info .div_main_info, .body .div_player_component .div_playlist .div_track .div_likes_and_downloads, .body .div_player_component .div_playlist .div_track .div_likes_and_downloads a,
-.body .div_player_component .div_playlist .div_track .div_likes_and_downloads a:visited, .body .div_player_component .empty_space, .body .div_player_component .div_track_time_info, .body .div_player_component .div_main_controls, .body .div_player_component .div_main_controls button {
+.body .div_player_component .div_playlist .div_track .div_likes_and_downloads a:visited, .body .div_player_component .empty_space, .body .div_player_component .div_track_time_info, .body .div_player_component .div_main_controls, .body .div_player_component .div_main_controls button, .body .splash_page_background, .body .splash_page_background .div_splash_page, .body .splash_page_background .div_splash_page .manifesto .heading, .body .splash_page_background .div_splash_page .tech, .body .splash_page_background .div_splash_page .tech .heading, .body .splash_page_background .div_splash_page .color_scheme, .body .splash_page_background .div_splash_page .color_scheme .heading, .body .splash_page_background .div_splash_page .color_scheme .sorted .black,
+.body .splash_page_background .div_splash_page .color_scheme .sorted .black_blue,
+.body .splash_page_background .div_splash_page .color_scheme .sorted .dark_blue,
+.body .splash_page_background .div_splash_page .color_scheme .sorted .main_blue,
+.body .splash_page_background .div_splash_page .color_scheme .sorted .light_blue,
+.body .splash_page_background .div_splash_page .color_scheme .sorted .almost_white,
+.body .splash_page_background .div_splash_page .color_scheme .sorted .white,
+.body .splash_page_background .div_splash_page .color_scheme .sorted .purple, .body .splash_page_background .div_splash_page .color_scheme .sorted .black .circle,
+.body .splash_page_background .div_splash_page .color_scheme .sorted .black_blue .circle,
+.body .splash_page_background .div_splash_page .color_scheme .sorted .dark_blue .circle,
+.body .splash_page_background .div_splash_page .color_scheme .sorted .main_blue .circle,
+.body .splash_page_background .div_splash_page .color_scheme .sorted .light_blue .circle,
+.body .splash_page_background .div_splash_page .color_scheme .sorted .almost_white .circle,
+.body .splash_page_background .div_splash_page .color_scheme .sorted .white .circle,
+.body .splash_page_background .div_splash_page .color_scheme .sorted .purple .circle, .body .splash_page_background .div_splash_page .links, .body .splash_page_background .div_splash_page .links .heading, .body .splash_page_background .div_splash_page .links .buttons, .body .splash_page_background .div_splash_page .footer {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
@@ -254,6 +268,140 @@ html {
     background-color: #DCECFA;
     color: #274C77;
     transition: 100ms all; }
+.body .splash_page_background {
+  align-items: flex-start;
+  top: 0;
+  right: 0;
+  left: 0;
+  position: fixed;
+  height: 100%;
+  font-size: 1.25rem;
+  overflow: auto;
+  z-index: 50; }
+  .body .splash_page_background .div_splash_page {
+    position: absolute;
+    background-color: #FFFFFF;
+    color: #000000; }
+    .body .splash_page_background .div_splash_page .manifesto .heading {
+      width: 100%;
+      padding-top: 2rem;
+      padding-bottom: 1rem; }
+    .body .splash_page_background .div_splash_page .manifesto p {
+      margin: 1rem; }
+    .body .splash_page_background .div_splash_page .tech .heading {
+      width: 100%;
+      padding-top: 2rem;
+      padding-bottom: 1rem; }
+    .body .splash_page_background .div_splash_page .tech .sorted {
+      justify-content: flex-start; }
+      .body .splash_page_background .div_splash_page .tech .sorted p {
+        margin-left: 1rem;
+        margin-right: 1rem; }
+      .body .splash_page_background .div_splash_page .tech .sorted .last_one {
+        margin-top: 1rem; }
+    .body .splash_page_background .div_splash_page .color_scheme .heading {
+      padding-top: 2rem;
+      padding-bottom: 1rem; }
+    .body .splash_page_background .div_splash_page .color_scheme .sorted {
+      justify-content: flex-start; }
+      .body .splash_page_background .div_splash_page .color_scheme .sorted p {
+        margin-left: 1rem;
+        margin-bottom: 1rem; }
+      .body .splash_page_background .div_splash_page .color_scheme .sorted .black,
+      .body .splash_page_background .div_splash_page .color_scheme .sorted .black_blue,
+      .body .splash_page_background .div_splash_page .color_scheme .sorted .dark_blue,
+      .body .splash_page_background .div_splash_page .color_scheme .sorted .main_blue,
+      .body .splash_page_background .div_splash_page .color_scheme .sorted .light_blue,
+      .body .splash_page_background .div_splash_page .color_scheme .sorted .almost_white,
+      .body .splash_page_background .div_splash_page .color_scheme .sorted .white,
+      .body .splash_page_background .div_splash_page .color_scheme .sorted .purple {
+        justify-content: flex-start; }
+        .body .splash_page_background .div_splash_page .color_scheme .sorted .black p,
+        .body .splash_page_background .div_splash_page .color_scheme .sorted .black_blue p,
+        .body .splash_page_background .div_splash_page .color_scheme .sorted .dark_blue p,
+        .body .splash_page_background .div_splash_page .color_scheme .sorted .main_blue p,
+        .body .splash_page_background .div_splash_page .color_scheme .sorted .light_blue p,
+        .body .splash_page_background .div_splash_page .color_scheme .sorted .almost_white p,
+        .body .splash_page_background .div_splash_page .color_scheme .sorted .white p,
+        .body .splash_page_background .div_splash_page .color_scheme .sorted .purple p {
+          margin: 0.5rem 1rem 0 1rem; }
+        .body .splash_page_background .div_splash_page .color_scheme .sorted .black .circle,
+        .body .splash_page_background .div_splash_page .color_scheme .sorted .black_blue .circle,
+        .body .splash_page_background .div_splash_page .color_scheme .sorted .dark_blue .circle,
+        .body .splash_page_background .div_splash_page .color_scheme .sorted .main_blue .circle,
+        .body .splash_page_background .div_splash_page .color_scheme .sorted .light_blue .circle,
+        .body .splash_page_background .div_splash_page .color_scheme .sorted .almost_white .circle,
+        .body .splash_page_background .div_splash_page .color_scheme .sorted .white .circle,
+        .body .splash_page_background .div_splash_page .color_scheme .sorted .purple .circle {
+          width: 2rem;
+          height: 2rem;
+          border-radius: 100%;
+          background-color: #000000; }
+          .body .splash_page_background .div_splash_page .color_scheme .sorted .black .circle .color,
+          .body .splash_page_background .div_splash_page .color_scheme .sorted .black_blue .circle .color,
+          .body .splash_page_background .div_splash_page .color_scheme .sorted .dark_blue .circle .color,
+          .body .splash_page_background .div_splash_page .color_scheme .sorted .main_blue .circle .color,
+          .body .splash_page_background .div_splash_page .color_scheme .sorted .light_blue .circle .color,
+          .body .splash_page_background .div_splash_page .color_scheme .sorted .almost_white .circle .color,
+          .body .splash_page_background .div_splash_page .color_scheme .sorted .white .circle .color,
+          .body .splash_page_background .div_splash_page .color_scheme .sorted .purple .circle .color {
+            width: 1.5rem;
+            height: 1.5rem;
+            border-radius: 100%;
+            background-color: red; }
+      .body .splash_page_background .div_splash_page .color_scheme .sorted .black .circle {
+        background-color: #FFFFFF; }
+        .body .splash_page_background .div_splash_page .color_scheme .sorted .black .circle .color {
+          background-color: #000000; }
+      .body .splash_page_background .div_splash_page .color_scheme .sorted .black_blue .circle {
+        background-color: #FFFFFF; }
+        .body .splash_page_background .div_splash_page .color_scheme .sorted .black_blue .circle .color {
+          background-color: #0F1D2E; }
+      .body .splash_page_background .div_splash_page .color_scheme .sorted .dark_blue .circle {
+        background-color: #FFFFFF; }
+        .body .splash_page_background .div_splash_page .color_scheme .sorted .dark_blue .circle .color {
+          background-color: #14273E; }
+      .body .splash_page_background .div_splash_page .color_scheme .sorted .main_blue .circle {
+        background-color: #FFFFFF; }
+        .body .splash_page_background .div_splash_page .color_scheme .sorted .main_blue .circle .color {
+          background-color: #274C77; }
+      .body .splash_page_background .div_splash_page .color_scheme .sorted .light_blue .circle {
+        background-color: #000000; }
+        .body .splash_page_background .div_splash_page .color_scheme .sorted .light_blue .circle .color {
+          background-color: #A3CEF1; }
+      .body .splash_page_background .div_splash_page .color_scheme .sorted .almost_white .circle {
+        background-color: #000000; }
+        .body .splash_page_background .div_splash_page .color_scheme .sorted .almost_white .circle .color {
+          background-color: #DCECFA; }
+      .body .splash_page_background .div_splash_page .color_scheme .sorted .white .circle {
+        background-color: #000000; }
+        .body .splash_page_background .div_splash_page .color_scheme .sorted .white .circle .color {
+          background-color: #FFFFFF; }
+      .body .splash_page_background .div_splash_page .color_scheme .sorted .purple .circle {
+        background-color: #000000; }
+        .body .splash_page_background .div_splash_page .color_scheme .sorted .purple .circle .color {
+          background-color: #52489C; }
+    .body .splash_page_background .div_splash_page .links .heading {
+      padding-top: 2rem;
+      padding-bottom: 1rem; }
+    .body .splash_page_background .div_splash_page .links .buttons a,
+    .body .splash_page_background .div_splash_page .links .buttons a:visited {
+      padding: 0.5rem;
+      margin-left: 0.5rem;
+      margin-right: 0.5rem;
+      border-radius: 0.5rem;
+      text-decoration: none;
+      background-color: #14273E;
+      color: #DCECFA;
+      transition: all 100ms; }
+    .body .splash_page_background .div_splash_page .links .buttons a:hover {
+      background-color: #DCECFA;
+      color: #274C77;
+      transition: all 100ms; }
+    .body .splash_page_background .div_splash_page .footer {
+      flex-direction: column;
+      margin-top: 3rem;
+      padding-bottom: 1rem; }
 
 @media only screen and (min-device-width: 1024px) {
   .body {
